--- a/packages/nuxi/package.json
+++ b/packages/nuxi/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nuxi",
-  "version": "3.0.0",
+  "version": "3.1.0",
   "repository": "nuxt/framework",
   "license": "MIT",
   "type": "module",
@@ -17,8 +17,8 @@
     "prepack": "unbuild"
   },
   "devDependencies": {
-    "@nuxt/kit": "3.0.0",
-    "@nuxt/schema": "3.0.0",
+    "@nuxt/kit": "^3.1.0",
+    "@nuxt/schema": "^3.1.0",
     "@nuxt/ui-templates": "npm:@nuxt/ui-templates-edge@latest",
     "@types/clear": "^0",
     "@types/mri": "^1.1.1",
