--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -32,5 +32,6 @@
   },
   "engines": {
     "node": "^14.16.0 || ^16.11.0 || ^17.0.0"
-  }
+  },
+  "gitHead": "e927e6ca5967f124e0c8b3549fe14501e828a4cd"
 }
