--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test/fixtures/*",
     "playground"
   ],
+  "private": true,
   "scripts": {
     "build": "FORCE_COLOR=1 lerna run prepack --stream --no-prefix",
     "example": "yarn workspace example-$0 dev",
